[gd_scene load_steps=8 format=3 uid="uid://bvnqlp2ne0khm"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_mvuql"]
[ext_resource type="PackedScene" uid="uid://bgswpl28qgmap" path="res://scenes/managers/manager_money.tscn" id="1_x57ct"]
[ext_resource type="Texture2D" uid="uid://bqnivt68il21d" path="res://1.jpg" id="2_q5d14"]
[ext_resource type="PackedScene" uid="uid://bh1yc8tuai63v" path="res://scenes/clicker_prototype/clicker_prototype.tscn" id="3_pxeu6"]
[ext_resource type="Texture2D" uid="uid://bu81xbq7aaprp" path="res://minimalistic black arcade machine screen.png" id="3_py1hl"]
[ext_resource type="FontFile" uid="uid://cdmx83y4fnqmh" path="res://PressStart2P-Regular.ttf" id="5_6c515"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4o6bd"]
bg_color = Color(0, 0, 0, 0.447059)

[node name="Game" type="Node"]
script = ExtResource("1_mvuql")

[node name="background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_q5d14")
stretch_mode = 6

[node name="Managers" type="Node" parent="."]

[node name="ManagerMoney" parent="Managers" instance=ExtResource("1_x57ct")]

[node name="background2" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_py1hl")

[node name="ClickerPrototype" parent="." instance=ExtResource("3_pxeu6")]

[node name="EventTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="ageLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 421.0
offset_top = 141.0
offset_right = -437.0
offset_bottom = 222.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_6c515")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_4o6bd")
text = "Age : 13"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="EventTimer" to="." method="_on_timer_timeout"]
